lesson17/log-analytics-service-mesh/istio/authorizationpolicies/authorization-policies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-apis
  namespace: log-analytics
spec:
  selector:
    matchLabels:
      app: ingestion-api
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["istio-system"]
    to:
    - operation:
        methods: ["POST", "GET"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-dashboard-to-query-api
  namespace: log-analytics
spec:
  selector:
    matchLabels:
      app: query-api
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/log-analytics/sa/default"]
    to:
    - operation:
        methods: ["GET"]
